Index: Fix spacing

--- a/contents/css/main.css
+++ b/contents/css/main.css
@@ -203,10 +203,6 @@ footer .copy, footer .copy a {
   padding: 0 0.7em;
 }
 
-.article.intro .content p {
-  display: inline;
-}
-
 .article.intro .content .more {
   text-decoration: underline;
   font-weight: 700;
